--- a/src/components/styles/Top.scss
+++ b/src/components/styles/Top.scss
@@ -64,6 +64,7 @@
           font-size: 1rem;
           padding: 12px 20px;
           width: 100%;
+          list-style-type: none;
           &:hover {
             background: #f9f9f9;
             color: var(--green);
