--- a/src/components/styles/guide.scss
+++ b/src/components/styles/guide.scss
@@ -44,7 +44,7 @@
         text-align: justify; /* meilleure densité visuelle */
       }
 
-      .guide {
+      button {
         display: inline-block;
         font-size: 1.05rem;
         padding: 0.75rem 1.75rem;
