--- a/src/components/partenaire/styles/devenirpartenaire.scss
+++ b/src/components/partenaire/styles/devenirpartenaire.scss
@@ -160,11 +160,25 @@
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
+        color: #1a1a1a;
+        background-color: #fff;
+        cursor: pointer;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 24 24' fill='none' stroke='%23333' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M6 9l6 6 6-6'/%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-position: right 15px center;
+        background-size: 14px;
+        padding-right: 40px !important;
 
         &:focus {
           outline: none;
           border-color: var(--green);
-          background: white;
+          background-color: white;
+        }
+
+        /* Style spécifique pour l'option désactivée (le placeholder) */
+        &:invalid,
+        &[value=""] {
+          color: #9ca3af; // Gris clair pour le "Sélectionnez votre secteur"
         }
       }
     }
