--- a/src/components/accueil/styles/Menu.scss
+++ b/src/components/accueil/styles/Menu.scss
@@ -1,4 +1,3 @@
-/* ================= GLOBAL ================= */
 #menu {
   position: relative;
   overflow: hidden;
@@ -123,7 +122,7 @@
   display: none !important;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1056px) {
   #menu::before {
     margin-top: 80px;
   }
@@ -170,19 +169,18 @@
   z-index: 9999;
   display: flex;
   align-items: flex-end;
+  margin: 10% 5% 5% 5%;
 
   .modal-backdrop {
     position: absolute;
     inset: 0;
-    background: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(6px);
   }
 
   .modal-panel {
     position: relative;
     width: 100%;
     background: white;
-    border-radius: 25px 25px 0 0;
+    border-radius: 25px;
     padding: 35px 20px 30px;
     max-height: 90vh;
     overflow-y: auto;
