--- a/src/components/services/styles/services.scss
+++ b/src/components/services/styles/services.scss
@@ -85,7 +85,7 @@
     .service-bloc {
       display: flex;
       align-items: center;
-      gap: 50px;
+      gap: 10px;
       margin-bottom: 70px;
 
       img {
@@ -258,7 +258,7 @@
     }
   }
 }
-@media (max-width: 430px) {
+@media (max-width: 1056px) {
   #services {
     margin-top: 80px;
   }
@@ -272,8 +272,7 @@
 .cta-final-container {
   display: flex;
   justify-content: center;
-  margin: 60px 0 40px;
-  padding-bottom: 20px;
+  margin: 0;
 
   .cta-estimate {
     background: var(--green);
