--- a/src/components/styles/footer.scss
+++ b/src/components/styles/footer.scss
@@ -37,13 +37,14 @@
       font-size: 1rem;
       text-transform: uppercase;
       letter-spacing: 1px;
-      margin-bottom: 25px;
+      margin-bottom: 0;
       font-weight: 700;
     }
 
     ul {
       list-style: none;
       padding: 0;
+      margin-top: 5px;
       li {
         margin-bottom: 12px;
         font-size: 0.9rem;
@@ -61,9 +62,9 @@
   .footer-contact {
     h3 {
       font-size: 1rem;
+      margin-bottom: 0;
       text-transform: uppercase;
       letter-spacing: 1px;
-      margin-bottom: 25px;
       font-weight: 700;
     }
 
