--- a/src/components/services/styles/services.scss
+++ b/src/components/services/styles/services.scss
@@ -277,10 +277,10 @@
   .cta-estimate {
     background: var(--green);
     color: white;
-    padding: 18px 45px;
+    padding: 15px;
     border: none;
-    border-radius: 50px;
-    font-size: 1.3rem;
+    border-radius: 15px;
+    font-size: 1.1rem;
     font-family: "Inria Serif", serif;
     font-weight: 700;
     cursor: pointer;
