--- a/src/components/services/styles/services.scss
+++ b/src/components/services/styles/services.scss
@@ -85,7 +85,7 @@
     .service-bloc {
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: 20px;
       margin-bottom: 70px;
 
       img {
@@ -155,6 +155,7 @@
           font-size: 1rem;
           line-height: 1.65;
           color: #333;
+          font-style: normal;
         }
       }
 
